--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "firebase": "^11.3.0",
+    "firebase-admin": "^13.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.1"
